Fix ConsolOptions allignment when collapsing

--- a/src/components/ConsoleOptions/style.css
+++ b/src/components/ConsoleOptions/style.css
@@ -3,6 +3,7 @@
     height: 0px;
     overflow: hidden;
     width: 100%;
+    margin-left: 2em;
 }
 
 .open-settings {
